add ability to search by language

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ p {
 }
 
 .btn:hover {
+  cursor: pointer;
   color: var(--primary);
   background-color: var(--tertiary);
   transform: translate(0, 0);
